--- a/styles1.css
+++ b/styles1.css
@@ -99,4 +99,78 @@ header {
         
     }
 
+    @media screen and (max-width:1450px) {
+
+      .main {
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        height: 50%;
+        display: block;
+        
+      }
+      
+      header {
+
+        display: none;
+      }
+
+      
+      div {
+          
+        width: 100%;
+      }
+
+
+
+      h1 {
+        font-size: 57px;
+         font-weight: 800;
+         text-align: center;
+         margin-top: 20px;
+         width: 100vh;
+        
+
+
+      }
+
+      h3 {
+
+        width: 100vh;
+        font-size: 49px;
+        text-align: center;
+        line-height: 55px;
+    
+      }
+
+
+      .button-agende {
+        display: none;
+
+      }
+      .foto-1 {
+
+        width: 800px; 
+        margin-left: 50px;
+        
+    
+    
+    }
+    .foto-2 {
+
+        width: 800px; 
+        margin-left: 50px;
+    }
+      
+    .logo-image
+    {
+
+        width: 800px; 
+        margin-left: 50px;
+    }
+
+
+
+
+    }
 
